k8s/tranquil-pds/manifests/tranquil-pds-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tranquil-pds-http-route
  namespace: tranquil-pds
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: envoy-gw
      sectionName: https
      namespace: default
  hostnames:
    - tranquil.tale.me
  rules:
    - backendRefs:
        - name: tranquil-pds
          port: 3000
